--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -660,10 +660,11 @@ figure.active-figure
     max-height: calc(95vh - 50px)
     transition: $trs
     border-radius: 5px
+    // transform-origin: center
     @media screen and ( max-width: 600px )
       max-height: calc(90vh - 20px)
-    &:hover
-      transform: scale(2)
+    // &:hover
+    //   transform: scale(2)
   .wrap-img 
     display: flex
     justify-content: center
@@ -696,11 +697,13 @@ figure.active-figure
 
 .close-btn
   position: fixed 
-  top: 20px
-  right: 20px
+  top: 30px
+  right: 30px
   z-index: 13
   width: 40px
   height: 40px
+  background-color: #fff
+  border-radius: 5px
   &:before,
   &:after 
     content: ''
