--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -45,7 +45,7 @@ block seo
 block content 
   section.first-screen
     .bg 
-      img.active-img(src="img/fs_bg1.jpg", alt="Композитний фасад" title="")
+      img.active-img(src="img/fs_bg1.jpg", alt="Композитний фасад" title="Зразок фасаду під замовлення")
       img(src="img/fs_bg2.JPG", alt="Об'ємні літери")
       img(src="img/fs_bg3.JPG", alt="Об’ємний козирок")
       //- img(src="img/fs_bg5.JPG", alt="Об'ємні світлові літери")
