--- a/src/pug/panel_sign.pug
+++ b/src/pug/panel_sign.pug
@@ -45,7 +45,7 @@ block content
   .wrapper.panel_sign-page.additional-page
     section(itemscope itemtype="https://schema.org/Organization")
       img(src="img/banner_panel_sign.jpg", alt="Щитова вивіска Chameleon" data-name="sign" itemprop="image")
-      img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign" itemprop="image")
+      img(src="img/banner_neon_sign.jpg", alt="Щитова неонова вивіска Chameleon" data-name="neon_sign" itemprop="image")
       .page-switches.flex-sb(itemprop="url")
         a.choosen-switch(href="#" data-name="sign") вивіски
         a(href="#" data-name="neon_sign") неонові вивіски 
