--- a/src/pug/facades.pug
+++ b/src/pug/facades.pug
@@ -44,7 +44,7 @@ block seo
 block content
   .wrapper.panel_sign-page.additional-page
     section(itemscope itemtype="https://schema.org/Organization") 
-      img(src="img/banner_facade.jpg", alt="" data-name="" itemprop="image")
+      img(src="img/banner_facade.jpg", alt="Банер та обшивка фасадом" data-name="" itemprop="image")
       //- img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign")
       //- .page-switches.flex-sb 
       //-   a.choosen-switch(href="#" data-name="sign") вивіски
