--- a/src/pug/sign.pug
+++ b/src/pug/sign.pug
@@ -1,51 +1,50 @@
 extends components/template.pug 
 
 block seo
-  meta(name="description", content="Розробка,Виготовлення Вивіски Різних Видів,Конфігурацій в м Хмельницькому. Щитова, Неонова вивіски за низькими цінами на 'РЕКЛАМА ПОДІЛЛЯ'.")
-  meta(name="keywords", content="Замовити вивіску, купити рекламний щит, купити вивіску дешево, купити неонову вивіску, замовити неонову вивіску, купити рекламний щит")
+  meta(name="description", content="Вивіски, лайтбокси з об'ємними літерами – поширений вид візуальних знаків, що застосовуються, як зовні, так і всередині приміщення.")
+  meta(name="keywords", content="Замовити вивіску, купити світлові літери, купити об'ємні світлові літери, купити неонову вивіску, замовити неонову вивіску, купити зовнішню рекламу з світлових літер")
   meta(name="author", content="Реклама Поділля")
   meta(name="publisher", content="Реклама Поділля")
   meta(name="robots", content="index follow")
-  meta(property="og:title" content="Рекламний щит,вивіски різних видів замовити в Хмельницькому за низькою ціною")
-  meta(property="og:description" content="Розробка,Виготовлення Вивіски Різних Видів,Конфігурацій в м Хмельницькому. Щитова, Неонова вивіски за низькими цінами на 'РЕКЛАМА ПОДІЛЛЯ'.")
+  meta(property="og:title" content="Вивіски та світлові літери різних видів на Реклама Поділля")
+  meta(property="og:description" content="Вивіски, лайтбокси з об'ємними літерами – поширений вид візуальних знаків, що застосовуються, як зовні, так і всередині приміщення.")
   meta(property="og:image" content="https://reklama-podillya.com.ua/img/logo.svg")
-  meta(property="og:url" content="https://reklama-podillya.com.ua/panel_sign.html")
+  meta(property="og:url" content="https://reklama-podillya.com.ua/sign.html")
   meta(property="og:type" content="website")
-  title Рекламний щит,вивіски різних видів замовити в Хмельницькому за низькою ціною
-  link(rel="canonical", href="https://reklama-podillya.com.ua/panel_sign.html")
+  title Вивіски та світлові літери різних видів на Реклама Поділля
+  link(rel="canonical", href="https://reklama-podillya.com.ua/sign.html")
   script(type="application/ld+json").
-    [
-      {
-        "@context": "http://schema.org/",
-        "@type": "LocalBusiness",
-        "name": "РЕКЛАМА ПОДІЛЛЯ",
-        "telephone": "067 904 77 38"
-      },
-      {
-        "@context": "http://schema.org/",
-        "@type": "LocalBusiness",
-        "name": "реклама Поділля",
-        "image": [
-          "https://reklama-podillya.com.ua/img/ll_bidonchik.jpg",
-          "https://reklama-podillya.com.ua/img/ll_sviatoslav.jpg",
-          "https://reklama-podillya.com.ua/img/ll_dnipro.jpg",
-          "https://reklama-podillya.com.ua/img/vf_veloman.jpg",
-          "https://reklama-podillya.com.ua/img/vf_center.jpg",
-          "https://reklama-podillya.com.ua/img/vf_right.jpg"
-        ],
-        "telephone": "067 904 77 38",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316"
-        }
+  [
+    {
+      "@context": "http://schema.org/",
+      "@type": "LocalBusiness",
+      "name": "РЕКЛАМА ПОДІЛЛЯ",
+      "telephone": "067 904 77 38"
+    },
+    {
+      "@context": "http://schema.org/",
+      "@type": "LocalBusiness",
+      "name": "реклама Поділля",
+      "image": [
+        "https://reklama-podillya.com.ua/img/ll_bidonchik.jpg",
+        "https://reklama-podillya.com.ua/img/ll_sviatoslav.jpg",
+        "https://reklama-podillya.com.ua/img/ll_dnipro.jpg",
+        "https://reklama-podillya.com.ua/img/vf_veloman.jpg",
+        "https://reklama-podillya.com.ua/img/vf_center.jpg",
+        "https://reklama-podillya.com.ua/img/vf_right.jpg"
+      ],
+      "telephone": "067 904 77 38",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316"
       }
-    ]
-
+    }
+  ]
 block content
   .wrapper.panel_sign-page.additional-page
     section 
       img(src="img/banner_bubbles.jpg", alt="Обʼємні світлові літери BUBBLES" data-name="sign" itemprop="image")
-      img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign" itemprop="image")
+      img(src="img/banner_neon_sign.jpg", alt="Неонова вивіска Chameleon" data-name="neon_sign" itemprop="image")
       .page-switches.flex-sb(itemprop="url")
         a.choosen-switch(href="#" data-name="sign") об'ємні світлові літери
         a(href="#" data-name="neon_sign") неонові вивіски 
