--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -177,8 +177,8 @@ block content
         )
         +creatingFigure(
           "img/vf_right.jpg",
-          "Вентильований фасад для «BUBBLES»",
-          "Вентильований фасад для «BUBBLES»",
+          "Вентильований фасад для «ІНВОЛ»",
+          "Вентильований фасад для «ІНВОЛ»",
           "Обшивка приміщення касетами алюмінієвого композиту 4 мм Г 1  по класу негорючості , вмонтоване на алюмінієвій підсистемі, з утепленням мінеральної вати від 50 до 150 мм"
         )
       +buttonLine("facades.html")
