--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -302,8 +302,16 @@ block content
             input.g-button.button(type="submit", value="відправити")
         .half.map-half.anim.animation-right 
           .contact-info
-            p 
+            p
               a.tel(href="tel:+380679047738") 067 904 77 38
+              span.soc-line
+                span &nbsp;
+                a.soc(href="https://t.me/reklamapodillya") 
+                  +svg("#tg")
+                a.soc(href="viber://chat?number=+380679047738%20") 
+                  +svg("#viber")
+            p 
+              a.tel(href="tel:+380665966838") 066 596 68 38
             p 
               address м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316
             +soc-line
