Add dropdown menu to our works

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -18,8 +18,25 @@ header.showen-menu
           a.scroll-btn(href="index.html#about-us") про нас
         li
           a.scroll-btn(href="index.html#service") послуги
-        li
+        li.drop-item
           a.scroll-btn(href="index.html#works") Наші роботи
+          ul.drop-menu 
+            li
+              a(href="sign.html#sign") об'ємні світлові літери та вивіски
+            li
+              a(href="lightbox.html") лайтбокси
+            li
+              a(href="sign.html#neon_sign") неонові вивіски
+            li
+              a(href="shield_sign.html") щитова та банерна вивіски
+            li
+              a(href="volumetrical_visors.html") обʼємні козирки
+            li
+              a(href="enterance_group.html") вхідна група
+            li
+              a(href="pillars.html") штендери. інформаційні щити. вуличні таблички, банери
+            li
+              a(href="facades.html") Вентильовані фасади
         li
           a.scroll-btn(href="index.html#facades") фасади
         li
