Add works gallery to dropdown menu

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -37,6 +37,8 @@ header.showen-menu
               a(href="pillars.html") штендери. інформаційні щити. вуличні таблички, банери
             li
               a(href="facades.html") Вентильовані фасади
+            li
+              a(href="gallery.php") Всі роботи
         li
           a.scroll-btn(href="index.html#facades") фасади
         li
